--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,29 @@
       <a href="https://gitlab.com/pages/">Other Examples</a>
     </div>
 
-    <h1>Hello World!</h1>
-
-    <p>
-      This is a simple plain-HTML website on GitLab Pages, without any fancy static site generator.
-    </p>
+        <div class="header">
+            <div class="container">
+                <a class="logo">
+                    <img src="images/logo.png" />
+                </a>
+                <ul class="menu-top pull-left">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Something</a></li>
+                    <li><a href="#">Something else</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="section">
+                    <a class="photo"><img src="images/hackathon.png" />First Hackathon</a>
+                    <p>Something only we know~~~~</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <a class="logo"><img src="images/logo-footer.png" /></a>
+        </div>
   </body>
 </html>
 
