Update public/index.html, public/style.css files

--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,18 @@
         <div class="content">
             <div class="container">
                 <div class="section">
-                    <a class="photo"><img src="images/hackathon.png" />First Hackathon</a>
-                    <p>Something only we know~~~~</p>
+                    <a class="photo"><img src="images/hackathon.png" /></a>
+                    <div class="info">
+                        <h3><a href="#">First Hackathon</a></h3>
+                        <p>Something only we know~~~~</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="footer">
-            <a class="logo"><img src="images/logo-footer.png" /></a>
+            <div class="container">
+                <a class="logo"><img src="images/logo-footer.png" /></a>
+            </div>
         </div>
   </body>
 </html>
